force-app/main/default/objects/Applicationn__c/Applicationn__c.object-meta.xml
<CustomObject>
    <label>Application.</label>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>