force-app/main/default/objects/Applicationn__c/fields/ApplyDate__c.field-meta.xml
<CustomField>
    <fullName>ApplyDate__c</fullName>
    <label>Apply Date</label>
    <type>Date</type>
</CustomField>