force-app/main/default/objects/Applicationn__c/fields/CandidateName__c.field-meta.xml
<CustomField>
    <fullName>CandidateName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate Name</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Application.</relationshipLabel>
    <relationshipName>Application1</relationshipName>
    <type>Lookup</type>
</CustomField>