force-app/main/default/objects/Applicationn__c/fields/Current_Action_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Action_ID__c</fullName>
    <formula>CASESAFEID( CurrentAction__r.Id )</formula>
    <label>Current Action ID</label>
    <type>Text</type>
</CustomField>