force-app/main/default/objects/Applicationn__c/fields/CurrentAction__c.field-meta.xml
<CustomField>
    <fullName>CurrentAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Action</label>
    <referenceTo>ApplicationToDoList__c</referenceTo>
    <relationshipLabel>Application</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>