force-app/main/default/objects/Applicationn__c/fields/Interview_Failed__c.field-meta.xml
<CustomField>
    <fullName>Interview_Failed__c</fullName>
    <label>Interview Failed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>