force-app/main/default/objects/Applicationn__c/fields/JobOpening__c.field-meta.xml
<CustomField>
    <fullName>JobOpening__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Opening</label>
    <referenceTo>Jobopening__c</referenceTo>
    <relationshipLabel>Application.</relationshipLabel>
    <relationshipName>Application1</relationshipName>
    <type>Lookup</type>
</CustomField>