force-app/main/default/objects/Applicationn__c/fields/LastStageResult__c.field-meta.xml
<CustomField>
    <fullName>LastStageResult__c</fullName>
    <formula>CandidateName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Stage Result</label>
    <type>Text</type>
</CustomField>