force-app/main/default/objects/Applicationn__c/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <label>Notice Period</label>
    <type>TextArea</type>
</CustomField>