force-app/main/default/objects/Applicationn__c/fields/Offer_valid_to_the_end_of__c.field-meta.xml
<CustomField>
    <fullName>Offer_valid_to_the_end_of__c</fullName>
    <formula>Offervalidto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer valid to the end of</label>
    <type>Date</type>
</CustomField>