force-app/main/default/objects/Applicationn__c/fields/Offervalidto__c.field-meta.xml
<CustomField>
    <fullName>Offervalidto__c</fullName>
    <label>Offer valid to</label>
    <type>Date</type>
</CustomField>