force-app/main/default/objects/Applicationn__c/fields/Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Office_Address__c</fullName>
    <label>Office Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Yuson Tower, 273B Ton Dan Str., Ward 15, Dist. 4, Ho Chi Minh City, Viet Nam</fullName>
                <label>HCM</label>
            </value>
            <value>
                <fullName>R716, 7 Floor, TD Building, 20A Le Hong Phong Str, Ngo Quyen Dist, Hai Phong City, Viet Nam</fullName>
                <label>Hai Phong</label>
            </value>
            <value>
                <fullName>4th Floor, Sunrise Building 2, No. 10 Ngo Gia Tu Str., Thach Thang Ward, Hai Chau District, Da Nang City, Vietnam</fullName>
            </value>
            <value>
                <fullName>Orkide Villa (St.2004) #TC11, St. LyLy, Sangkat Ou Bek Kaaom, Khan Sen Sok Phnom Penh, Cambodia.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>