force-app/main/default/objects/Applicationn__c/fields/OnboardDate__c.field-meta.xml
<CustomField>
    <fullName>OnboardDate__c</fullName>
    <label>Onboard Date</label>
    <type>Date</type>
</CustomField>