force-app/main/default/objects/Applicationn__c/fields/Process_Template__c.field-meta.xml
<CustomField>
    <fullName>Process_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Template</label>
    <referenceTo>ProcessTemplate__c</referenceTo>
    <relationshipLabel>Application.</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>