force-app/main/default/objects/Applicationn__c/fields/Recruitment_Channel__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Channel__c</fullName>
    <formula>text (JobOpening__r.Recruitmentchannel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recruitment Channel</label>
    <type>Text</type>
</CustomField>