force-app/main/default/objects/Applicationn__c/fields/RecruitmentRequest__c.field-meta.xml
<CustomField>
    <fullName>RecruitmentRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Request</label>
    <referenceTo>RecruitmentRequest__c</referenceTo>
    <relationshipLabel>Application.</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>