force-app/main/default/objects/Applicationn__c/fields/SentEmail__c.field-meta.xml
<CustomField>
    <fullName>SentEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Email</label>
    <type>Checkbox</type>
</CustomField>