force-app/main/default/objects/Applicationn__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV Unqualified</fullName>
            </value>
            <value>
                <fullName>CV Qualified</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Interview 1 Qualified</fullName>
            </value>
            <value>
                <fullName>Interview 2 Qualified</fullName>
            </value>
            <value>
                <fullName>Considering</fullName>
            </value>
            <value>
                <fullName>BOD Approved</fullName>
            </value>
            <value>
                <fullName>Sent Offer Letter</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Interview Failed</fullName>
                <isActive>false</isActive>
                <label>Interview Failed</label>
            </value>
            <value>
                <fullName>Interview Passed</fullName>
                <isActive>false</isActive>
                <label>Interview Passed</label>
            </value>
            <value>
                <fullName>Rejected by Candidate</fullName>
                <isActive>false</isActive>
                <label>Rejected by Candidate</label>
            </value>
            <value>
                <fullName>Submit to BOD</fullName>
                <isActive>false</isActive>
                <label>Submit to BOD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>