force-app/main/default/objects/Applicationn__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>CV URL</label>
    <type>Url</type>
</CustomField>