force-app/main/default/objects/Applicationn__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApplyDate__c</columns>
    <columns>ApplicationStatus__c</columns>
    <columns>CandidateName__c</columns>
    <columns>Email__c</columns>
    <columns>RecruitmentRequest__c</columns>
    <columns>Stage__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>