force-app/main/default/objects/Applicationn__c/listViews/TCL_HR_Receiving_Application_Assessment_Applicationn.listView-meta.xml
<ListView>
    <fullName>TCL_HR_Receiving_Application_Assessment_Applicationn</fullName>
    <filterScope>Queue</filterScope>
    <label>TCL-HR Receiving Application Assessment</label>
    <queue>TCL_HR_Receiving_Application_Assessment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>